--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="/manifest.json">
+    <link rel="stylesheet" href="index.css">
     <!-- <link rel="stylesheet" href="/assets/index.css"> -->
     <title>Georgia Votes Visual</title>
   </head>
@@ -15,7 +16,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
+    <script type="module" src="index.js"></script>
     <!-- <script src="/assets/index.js"></script> -->
   </body>
 </html>
