--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="google-site-verification" content="GX4tNNleWsGj2LURTGhwMl-3-e2FLO0Za7tYCpT_CPQ" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/peach.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="/manifest.json">
